<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car location</string>
    <string name="save_settings">Save</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="device">IMEI</string>
    <string name="cycle">Upload cycle</string>
    <string name="default_host">sz.gxfy.net</string>
    <string name="default_port">6969</string>
<!--     <string name="default_host">sz.gxfy.net</string>
    <string name="default_port">6969</string> -->
    <string name="default_device"></string>
    <string name="default_cycle">60</string>
    <string name="null_info_tips">%1$s can not be null.</string>

    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="time">Date time:</string>
    <string name="module">Module:</string>
    <string name="address">Address:</string>

    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <string name="exit_tips">Exit will stop upload data! Sure?</string>
    <string name="tips_title">Warning</string>

</resources>
